fixing-gap

--- a/style.css
+++ b/style.css
@@ -562,6 +562,10 @@
     height: 150px;
   }
 
+  .main-other-member {
+    gap: 0;
+  }
+
   .dream {
     padding: 1.5rem;
   }
